Fixed a spacing thing

--- a/css/desktop.css
+++ b/css/desktop.css
@@ -70,7 +70,7 @@
   }
   section.screenshots {
     background-color: #f9f7d4;
-    padding: 5% 0 0;
+    padding: 1% 0 0;
   }
   section.playnow {
     margin-top: -4rem;
